aligned navbar bug

--- a/client/animal-shelter-website/src/app/nav-bar/nav-bar.component.css
+++ b/client/animal-shelter-website/src/app/nav-bar/nav-bar.component.css
@@ -20,11 +20,13 @@
   float: left;
   color: white;
   text-align: center;
-  padding: 1.875% 1.875%;
+  align-items: center;
+  padding: 1.875rem 1.875rem;
   text-decoration: none;
   font-size: 1.25rem;
   cursor: pointer;
   font-size: 1.25rem;
+  white-space: nowrap;
 }
 
 .dropdown {
@@ -40,9 +42,9 @@
   font-family: inherit;
   margin: 0;
   padding: 1.875rem 1.875rem;
+  align-items: center;
   cursor: pointer;
   font-size: 1.25rem;
-  white-space: nowrap;
 }
 
 .mainNav a:hover, .dropdown:hover .dropdown-header {
@@ -61,7 +63,6 @@
 .dropdown-content a {
   float: none;
   color: white;
-  padding: 0.75rem 1rem;
   padding: 0.75rem 1rem;
   text-decoration: none;
   display: block;
